--- a/AspNetCoreSharedKernel/AspNetCoreSharedKernel.csproj
+++ b/AspNetCoreSharedKernel/AspNetCoreSharedKernel.csproj
@@ -7,6 +7,9 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Ardalis.Result" Version="10.1.0" />
+    <PackageReference Include="Microsoft.AspNetCore.DataProtection.Abstractions" Version="9.0.5" />
+    <PackageReference Include="Microsoft.AspNetCore.DataProtection.Extensions" Version="9.0.5" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.5" />
     <PackageReference Include="Microsoft.Extensions.Compliance.Redaction" Version="9.5.0" />
   </ItemGroup>
