Refactor and enhance functional programming utilities
- Changed CA1713 severity in .editorconfig from error to warning.
- Updated ActionExtensions with new methods for converting Action to Func.
- Introduced BusinessError class for error handling.
- Expanded Either class with new methods and ToEither functionality.
- Added EnumExtensions for parsing strings into enums.
- Enhanced EnumerableExtensions with various utility methods.
- Introduced Age struct with validation logic.
- Expanded Functional.cs with new controller and domain models.
- Added Exceptional struct for functional exception handling.
- Modified Exercises.cs to include functional programming exercises.
- Introduced Person class with properties for personal data.
- Updated F.cs with utility functions for currying and piping.
- Added Int.cs for integer parsing and checking utilities.
- Expanded Option.cs with additional mapping and binding methods.
- Introduced Validation struct for handling validation results.
- Updated GlobalUsings to include Microsoft.EntityFrameworkCore.
- Modified ISoftDeletable to include deletion logic.
- Updated PersonalDataAttribute with new classification attribute.
- Improved timeout handling in TaskExtensions.
- Updated TimeLimitedDataProtector with necessary directives.

--- a/.editorconfig
+++ b/.editorconfig
@@ -538,7 +538,7 @@ dotnet_diagnostic.CA1713.severity = warning
 dotnet_diagnostic.CA1714.severity = error
 
 # Identifiers should have correct prefix
-dotnet_diagnostic.CA1715.severity = error
+dotnet_diagnostic.CA1715.severity = suggestion
 
 # Identifiers should not match keywords
 dotnet_diagnostic.CA1716.severity = warning
